# BGTracker

./: CMakeLists.txt  Makefile  README.md  test.sh
exe/: MV.cu  ParticleGen.cu  TrackingTest.cu
include/: BGCuda.h  BGE.h  Bend.h  Drif.h  Quad.h  Sext.h  util.h
python/: wrapper.cc
src/: BGCuda.cu  Bend.cc  Drif.cc  Quad.cc  Quad.cu  Sext.cc  util.cc
test/: test.py
